<resources>
    <string name="app_name">My Weather Forecast</string>
    <string name="location">Location</string>
    <string name="latitude">Latitude</string>
    <string name="longtitude">Longtitude</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="openweather_api_key">OpenWeather API key</string>
    <string name="save">Save</string>
    <string name="weathericon">weatherIcon</string>
    <string name="temperature">Temperature</string>
    <string name="humidity">Humidity</string>
    <string name="pressure">Pressure</string>
    <string name="sign_in_with_google">Sign In with Google</string>
    <string name="signout">Signout</string>
</resources>
